update request and check_hscode

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ application/config/development
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
+/assets/temp/*
+/assets/uploads/*
