--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*/config/development/
+*/config/development/*
 */logs/log-*.php
 !*/logs/index.html
 */cache/*
@@ -8,7 +8,7 @@
 
 #codeigniter 3
 application/logs/*
-application/config/development
+application/config/development/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
